{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 11,
  "lineage": "33a7deef-b425-a484-0fb7-d91469788ff1",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "dknit-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/publicIPAddresses/dknit-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.123.189.149",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dknit-ip",
            "resource_group_name": "dknit-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dknit-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/networkInterfaces/dknit-nic",
            "internal_domain_name_suffix": "ihxfjd5ggxwebck3grdee5dm1b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dknit-ip-config",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/publicIPAddresses/dknit-ip",
                "subnet_id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/virtualNetworks/dknit-vnet/subnets/dknit-subnet"
              }
            ],
            "location": "westeurope",
            "name": "dknit-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "dknit-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.dknit-ip",
            "azurerm_resource_group.dknit-rg",
            "azurerm_subnet.dknit-subnet",
            "azurerm_virtual_network.dknit-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dknit-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/networkSecurityGroups/dknit-nsg",
            "location": "westeurope",
            "name": "dknit-nsg",
            "resource_group_name": "dknit-resources",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.dknit-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dknit-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/networkSecurityGroups/dknit-nsg/securityRules/dknit-dev-rule",
            "name": "dknit-dev-rule",
            "network_security_group_name": "dknit-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "dknit-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.dknit-nsg",
            "azurerm_resource_group.dknit-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dknit-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/publicIPAddresses/dknit-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.123.189.149",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "dknit-ip",
            "resource_group_name": "dknit-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.dknit-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dknit-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/virtualNetworks/dknit-vnet/subnets/dknit-subnet",
            "name": "dknit-subnet",
            "resource_group_name": "dknit-resources",
            "virtual_network_name": "dknit-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.dknit-rg",
            "azurerm_virtual_network.dknit-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dknit-subnet-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/virtualNetworks/dknit-vnet/subnets/dknit-subnet",
            "network_security_group_id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/networkSecurityGroups/dknit-nsg",
            "subnet_id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/virtualNetworks/dknit-vnet/subnets/dknit-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.dknit-nsg",
            "azurerm_resource_group.dknit-rg",
            "azurerm_subnet.dknit-subnet",
            "azurerm_virtual_network.dknit-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dknit-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8f54ee41-35e6-40ec-895d-3446427c6cd9",
            "id": "/subscriptions/44f5de84-49cf-43c7-8cfa-dff267986dd8/resourceGroups/dknit-resources/providers/Microsoft.Network/virtualNetworks/dknit-vnet",
            "location": "westeurope",
            "name": "dknit-vnet",
            "resource_group_name": "dknit-resources",
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.dknit-rg"
          ]
        }
      ]
    }
  ]
}